fix: :bug: Fixing Actions
Problem on actions did not put and specific branch to test if it works

--- a/domains/core/user-service/.github/workflows/ci.yml
+++ b/domains/core/user-service/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: Node.js CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - test
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -13,3 +19,4 @@ jobs:
           node-version: 18
       - run: npm install
       - run: npm test
+          
