--- a/domains/core/language-service/.github/workflows/ci.yml
+++ b/domains/core/language-service/.github/workflows/ci.yml
@@ -1,6 +1,11 @@
 name: Node.js CI
 
-on: [push, pull_request]
+on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "test" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
