--- a/domains/alert-managment/validation-service/Dockerfile
+++ b/domains/alert-managment/validation-service/Dockerfile
@@ -1,4 +1,11 @@
+# Build Stage
+FROM maven:3.9.2-eclipse-temurin-17 AS builder
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
+# Run Stage
 FROM openjdk:17
-VOLUME /tmp
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+WORKDIR /app
+COPY --from=builder /app/target/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
