--- a/domains/alert-managment/validation-service/pom.xml
+++ b/domains/alert-managment/validation-service/pom.xml
@@ -2,21 +2,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.deasla</groupId>
-    <artifactId>validation</artifactId>
+    <artifactId>validation-service</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
-    <name>ValidationService</name>
-    <description>ValidationService microservice</description>
-    <properties>
-        <java.version>17</java.version>
-    </properties>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.0</version>
+        <relativePath/>
+    </parent>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
