fix: :bug: Fix actions
Fix problem on actions that did not let test work

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,10 @@ jobs:
           'profile-service',
           'language-service',
           'geo-service',
-          'push-service',
+          'alert-service',
           'schedule-service',
-          'email-service',
-          'graphql-gateway'
+          'template-service',
+          'validation-service'
         ]
 
     steps:
