--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,14 +25,13 @@ jobs:
 
       - name: Run tests in domains/core/${{ matrix.service }}
         run: |
-          cd domains/core/${{ matrix.service }}
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-            pytest tests
-          elif [ -f package.json ]; then
-            npm install
-            npm test
-          fi
+         cd domains/core/${{ matrix.service }}
+         if [ -f package.json ]; then
+          npm install
+          npm install --save-dev supertest
+          npm test
+         fi
+
 
   test-alert:
     runs-on: ubuntu-latest
