--- a/domains/alert-managment/validation-service/.github/workflows/test.yml
+++ b/domains/alert-managment/validation-service/.github/workflows/test.yml
@@ -1,19 +1,36 @@
-name: CI Test
+
+name: CI for validation-service
 
 on:
   push:
-    branches: [ main ]
+    branches: [test]
   pull_request:
-    branches: [ main ]
+    branches: [test]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      mongodb:
+        image: mongo:5
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd="echo 'db.runCommand("ping").ok' | mongo localhost/test --quiet"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up php
-      uses: actions/setup-php@v1
-    - name: Install dependencies and test
-      run: |
-        echo "Running test for php in validation-service"
-        phpunit
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies and run tests
+        run: |
+          cd domains/core/validation-service
+          npm install
+          npm test
