--- a/domains/core/auth-service/package.json
+++ b/domains/core/auth-service/package.json
@@ -15,6 +15,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "jest": "^29.6.1"
+    "jest": "^29.6.1",
+    "supertest": "^6.3.3"
   }
 }
