--- a/domains/core/user-service/.github/workflows/ci.yml
+++ b/domains/core/user-service/.github/workflows/ci.yml
@@ -1,26 +1,32 @@
-name: Node.js CI
+name: CI - User Service
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "test" ]
+    paths:
+      - 'core/user-service/**'
   pull_request:
-    branches: [ "main" ]
+    paths:
+      - 'core/user-service/**'
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: core/user-service
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - run: npm install
-      - run: npm test
-          
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run unit tests
+        run: npm test
