--- a/domains/core/user-service/Dockerfile
+++ b/domains/core/user-service/Dockerfile
@@ -1,7 +1,21 @@
-FROM node:18-alpine
+# Use official Node.js LTS image
+FROM node:18
+
+# Set working directory
 WORKDIR /app
+
+# Copy package files and install dependencies
 COPY package*.json ./
 RUN npm install
+
+# Copy source code
 COPY . .
-EXPOSE 3000
-CMD [ "node", "src/index.js" ]
+
+# Expose the port the app runs on
+EXPOSE 3001
+
+# Define environment variable
+ENV NODE_ENV=production
+
+# Start the application
+CMD ["npm", "start"]
