--- a/domains/core/user-service/package.json
+++ b/domains/core/user-service/package.json
@@ -1,21 +1,31 @@
 {
   "name": "user-service",
   "version": "1.0.0",
-  "description": "User microservice for DEAS-LA",
+  "description": "User management microservice for the core domain of DEAS-LA",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest"
+    "dev": "nodemon src/index.js",
+    "test": "jest --runInBand"
   },
+  "keywords": ["user", "microservice", "core", "DEAS-LA"],
+  "author": "DEAS-LA Team",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "sequelize": "^6.32.1",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "swagger-ui-express": "^4.6.3",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "jest": "^29.6.1",
-    "supertest": "^6.3.3"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "nodemon": "^3.0.2"
   }
 }
