--- a/domains/core/auth-service/.env
+++ b/domains/core/auth-service/.env
@@ -1,5 +1,7 @@
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_USER=deasla_user
-POSTGRES_PASSWORD=deasla_pass
-POSTGRES_DB=deasla_db
+PORT=3001
+JWT_SECRET=your_jwt_secret_here
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
+DB_NAME=deasla_auth
