--- a/domains/core/language-service/Dockerfile
+++ b/domains/core/language-service/Dockerfile
@@ -1,7 +1,18 @@
-FROM node:18-alpine
+# Use official Node.js image
+FROM node:18
+
+# Set working directory
 WORKDIR /app
+
+# Copy package files and install dependencies
 COPY package*.json ./
 RUN npm install
+
+# Copy the rest of the code
 COPY . .
-EXPOSE 3000
-CMD [ "node", "src/index.js" ]
+
+# Expose service port
+EXPOSE 3004
+
+# Start the application
+CMD ["npm", "start"]
