--- a/domains/core/role-service/Dockerfile
+++ b/domains/core/role-service/Dockerfile
@@ -1,7 +1,18 @@
-FROM node:18-alpine
+# Base image
+FROM node:18
+
+# Working directory
 WORKDIR /app
+
+# Install dependencies
 COPY package*.json ./
 RUN npm install
+
+# Copy source
 COPY . .
-EXPOSE 3000
-CMD [ "node", "src/index.js" ]
+
+# Expose API port
+EXPOSE 3003
+
+# Start command
+CMD ["npm", "start"]
