--- a/domains/core/role-service/package.json
+++ b/domains/core/role-service/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "user-service",
+  "name": "role-service",
   "version": "1.0.0",
-  "description": "User microservice for DEAS-LA",
+  "description": "Manages user roles and permissions in DEAS-LA core domain",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "jest"
   },
+  "keywords": ["role", "rbac", "auth", "deas-la"],
+  "author": "DEAS-LA Team",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^7.4.0",
+    "jsonwebtoken": "^9.0.1",
+    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.0",
     "swagger-ui-express": "^4.6.3",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "jest": "^29.6.1",
-    "supertest": "^6.3.3"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "nodemon": "^3.0.2"
   }
 }
