--- a/domains/core/user-service/.github/workflows/ci.yml
+++ b/domains/core/user-service/.github/workflows/ci.yml
@@ -1,32 +1,39 @@
-name: CI - User Service
+name: CI
 
 on:
   push:
-    paths:
-      - 'core/user-service/**'
+    branches: [ main ]
   pull_request:
-    paths:
-      - 'core/user-service/**'
+    branches: [ main ]
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: core/user-service
-
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
+          POSTGRES_DB: deasla_user_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_USER: test
+      DB_PASSWORD: test
+      DB_NAME: deasla_user_test
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run unit tests
-        run: npm test
+          node-version: 20
+      - run: npm ci
+      - run: npm test
