--- a/domains/core/user-service/package.json
+++ b/domains/core/user-service/package.json
@@ -1,31 +1,23 @@
 {
   "name": "user-service",
   "version": "1.0.0",
-  "description": "User management microservice for the core domain of DEAS-LA",
-  "main": "src/index.js",
+  "description": "DEAS-LA Core Domain - User Microservice",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest --runInBand"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "jest"
   },
-  "keywords": ["user", "microservice", "core", "DEAS-LA"],
-  "author": "DEAS-LA Team",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "sequelize": "^6.32.1",
-    "pg": "^8.11.1",
-    "pg-hstore": "^2.3.4",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.1",
-    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "swagger-ui-express": "^4.6.3",
-    "yamljs": "^0.3.0"
+    "express": "^4.18.2",
+    "pg": "^8.11.1",
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "jest": "^29.6.1",
     "supertest": "^6.3.3",
-    "nodemon": "^3.0.2"
+    "nodemon": "^2.0.22"
   }
 }
