fix: :bug: Fix core domain
Finish of full structure for creo domain

--- a/domains/core/language-service/.env
+++ b/domains/core/language-service/.env
@@ -1,5 +1,2 @@
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_USER=deasla_user
-POSTGRES_PASSWORD=deasla_pass
-POSTGRES_DB=deasla_db
+PORT=3005
+MONGO_URI=mongodb://localhost:27017/deasla_language
