--- a/domains/core/language-service/.github/workflows/ci.yml
+++ b/domains/core/language-service/.github/workflows/ci.yml
@@ -1,32 +1,31 @@
-name: CI - Language Service
+name: CI
 
 on:
   push:
-    paths:
-      - 'core/language-service/**'
+    branches: [ main ]
   pull_request:
-    paths:
-      - 'core/language-service/**'
+    branches: [ main ]
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: core/language-service
-
+    services:
+      mongo:
+        image: mongo:6
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      MONGO_URI: mongodb://localhost:27017/deasla_language_test
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run unit tests
-        run: npm test
+          node-version: 20
+      - run: npm ci
+      - run: npm test
