--- a/domains/core/language-service/package.json
+++ b/domains/core/language-service/package.json
@@ -1,28 +1,22 @@
 {
   "name": "language-service",
   "version": "1.0.0",
-  "description": "Handles localization and language metadata in DEAS-LA",
-  "main": "src/index.js",
+  "description": "DEAS-LA Core Domain - Language Microservice",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "jest"
   },
-  "keywords": ["languages", "localization", "deas-la"],
-  "author": "DEAS-LA Team",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "sequelize": "^6.32.1",
-    "mysql2": "^3.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "swagger-ui-express": "^4.6.3",
-    "yamljs": "^0.3.0"
+    "express": "^4.18.2",
+    "mongoose": "^8.3.3"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "jest": "^29.6.1",
     "supertest": "^6.3.3",
-    "nodemon": "^3.0.2"
+    "nodemon": "^2.0.22"
   }
 }
