--- a/domains/core/profile-service/package.json
+++ b/domains/core/profile-service/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "user-service",
+  "name": "profile-service",
   "version": "1.0.0",
-  "description": "User microservice for DEAS-LA",
-  "main": "src/index.js",
+  "description": "DEAS-LA Core Domain - Profile Microservice",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.0",
-    "swagger-ui-express": "^4.6.3",
-    "yamljs": "^0.3.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.3.3"
   },
   "devDependencies": {
     "jest": "^29.6.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "nodemon": "^2.0.22"
   }
 }
