--- a/domains/core/role-service/.env
+++ b/domains/core/role-service/.env
@@ -1,5 +1,4 @@
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_USER=deasla_user
-POSTGRES_PASSWORD=deasla_pass
-POSTGRES_DB=deasla_db
+PORT=3006
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=your_password
