--- a/domains/core/role-service/.github/workflows/ci.yml
+++ b/domains/core/role-service/.github/workflows/ci.yml
@@ -1,32 +1,36 @@
-name: CI - Role Service
+name: CI
 
 on:
   push:
-    paths:
-      - 'core/role-service/**'
+    branches: [ main ]
   pull_request:
-    paths:
-      - 'core/role-service/**'
+    branches: [ main ]
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: core/role-service
-
+    services:
+      neo4j:
+        image: neo4j:5
+        env:
+          NEO4J_AUTH: neo4j/test
+        ports:
+          - 7687:7687
+          - 7474:7474
+        options: >-
+          --health-cmd "cypher-shell -u neo4j -p test 'RETURN 1'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      NEO4J_URI: bolt://localhost:7687
+      NEO4J_USER: neo4j
+      NEO4J_PASSWORD: test
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
+          node-version: 20
+      - run: npm ci
+      - run: npm test
