--- a/domains/core/role-service/package.json
+++ b/domains/core/role-service/package.json
@@ -1,28 +1,22 @@
 {
   "name": "role-service",
   "version": "1.0.0",
-  "description": "Manages user roles and permissions in DEAS-LA core domain",
-  "main": "src/index.js",
+  "description": "DEAS-LA Core Domain - Role Microservice",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "jest"
   },
-  "keywords": ["role", "rbac", "auth", "deas-la"],
-  "author": "DEAS-LA Team",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.4.0",
-    "jsonwebtoken": "^9.0.1",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "swagger-ui-express": "^4.6.3",
-    "yamljs": "^0.3.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "neo4j-driver": "^5.17.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "jest": "^29.6.1",
     "supertest": "^6.3.3",
-    "nodemon": "^3.0.2"
+    "nodemon": "^2.0.22"
   }
 }
