--- a/domains/alert-managment/template-service/Dockerfile
+++ b/domains/alert-managment/template-service/Dockerfile
@@ -1,11 +1,11 @@
-# Build Stage
-FROM maven:3.9.2-eclipse-temurin-17 AS builder
+FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
 WORKDIR /app
-COPY . .
+COPY pom.xml .
+COPY src ./src
 RUN mvn clean package -DskipTests
 
-# Run Stage
-FROM openjdk:17
+FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
-COPY --from=builder /app/target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+COPY --from=build /app/target/template-service-1.0.0.jar app.jar
+EXPOSE 8083
+ENTRYPOINT ["java", "-jar", "app.jar"]
