--- a/domains/notification/notification-core/Dockerfile
+++ b/domains/notification/notification-core/Dockerfile
@@ -1,5 +1,11 @@
-FROM golang:1.20
+FROM golang:1.22-alpine AS build
 WORKDIR /app
 COPY . .
-RUN go build -o main .
-CMD ["./main"]
+RUN go mod tidy
+RUN go build -o notification-core ./cmd/main.go
+
+FROM alpine:latest
+WORKDIR /app
+COPY --from=build /app/notification-core .
+EXPOSE 4103
+ENTRYPOINT ["./notification-core"]
