--- a/domains/notification/retry-engine/Dockerfile
+++ b/domains/notification/retry-engine/Dockerfile
@@ -1,5 +1,11 @@
-FROM golang:1.20
+FROM golang:1.22-alpine AS build
 WORKDIR /app
 COPY . .
-RUN go build -o main .
-CMD ["./main"]
+RUN go mod tidy
+RUN go build -o retry-engine ./cmd/main.go
+
+FROM alpine:latest
+WORKDIR /app
+COPY --from=build /app/retry-engine .
+EXPOSE 4104
+ENTRYPOINT ["./retry-engine"]
