--- a/domains/report/audit-trail/Cargo.toml
+++ b/domains/report/audit-trail/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+chrono = "0.4"
+lazy_static = "1.4"
