--- a/domains/report/stat-analyzer/Dockerfile
+++ b/domains/report/stat-analyzer/Dockerfile
@@ -1,5 +1,10 @@
-FROM rust:1.82
-WORKDIR /usr/src/app
+FROM rust:1.74 as builder
+WORKDIR /app
 COPY . .
 RUN cargo build --release
-CMD ["./target/release/main"]
+
+FROM debian:buster-slim
+WORKDIR /app
+COPY --from=builder /app/target/release/stat-analyzer .
+EXPOSE 4205
+CMD ["./stat-analyzer"]
