--- a/domains/external/graphql-gateway/Dockerfile
+++ b/domains/external/graphql-gateway/Dockerfile
@@ -1,5 +1,11 @@
 FROM python:3.11-slim
+
 WORKDIR /app
-COPY . .
-RUN pip install fastapi uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "3000"]
+
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+
+COPY ./src ./src
+COPY ./tests ./tests
+
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "4001"]
