feat: :sparkles: Creating dbs and .env
Creating dbs for the first domain and .env need to add endpoint

--- a/domains/core/role-service/.env
+++ b/domains/core/role-service/.env
@@ -1,4 +1,10 @@
-PORT=3006
-NEO4J_URI=bolt://localhost:7687
-NEO4J_USER=neo4j
-NEO4J_PASSWORD=your_password
+# PostgreSQL Connection
+POSTGRES_HOST=<replace_with_postgres_endpoint>
+POSTGRES_PORT=5432
+POSTGRES_USER=deaslaadmin
+POSTGRES_PASSWORD=<replace_with_pg_password>
+POSTGRES_DB=deaslapg
+
+# JWT/Other service settings
+JWT_SECRET=<your_jwt_secret>
+SERVICE_PORT=3000
