--- a/domains/core/user-service/.env
+++ b/domains/core/user-service/.env
@@ -1,6 +1,10 @@
-PORT=3002
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=deasla_user
+# PostgreSQL Connection
+POSTGRES_HOST=<replace_with_postgres_endpoint>
+POSTGRES_PORT=5432
+POSTGRES_USER=deaslaadmin
+POSTGRES_PASSWORD=<replace_with_pg_password>
+POSTGRES_DB=deaslapg
+
+# JWT/Other service settings
+JWT_SECRET=<your_jwt_secret>
+SERVICE_PORT=3000
