--- a/domains/alert-managment/alert-service/.env
+++ b/domains/alert-managment/alert-service/.env
@@ -1,3 +1,5 @@
-NEO4J_URI=bolt://neo4j:7687
-NEO4J_USER=neo4j
-NEO4J_PASSWORD=pass
+CASSANDRA_HOST=<replace_with_cassandra_public_ip>
+CASSANDRA_PORT=9042
+CASSANDRA_USER=cassandra
+CASSANDRA_PASSWORD=<replace_with_cassandra_password>
+CASSANDRA_KEYSPACE=deasla_alerts
