--- a/domains/core/language-service/.env
+++ b/domains/core/language-service/.env
@@ -1,2 +1,10 @@
-PORT=3005
-MONGO_URI=mongodb://localhost:27017/deasla_language
+# PostgreSQL Connection
+POSTGRES_HOST=<replace_with_postgres_endpoint>
+POSTGRES_PORT=5432
+POSTGRES_USER=deaslaadmin
+POSTGRES_PASSWORD=<replace_with_pg_password>
+POSTGRES_DB=deaslapg
+
+# JWT/Other service settings
+JWT_SECRET=<your_jwt_secret>
+SERVICE_PORT=3000
