--- a/domains/core/language-service/Dockerfile
+++ b/domains/core/language-service/Dockerfile
@@ -1,12 +1,7 @@
-FROM node:20-alpine
-
-WORKDIR /usr/src/app
-
+FROM node:20
+WORKDIR /app
 COPY package*.json ./
 RUN npm install
-
 COPY . .
-
-EXPOSE 3005
-
-CMD ["npm", "start"]
+COPY .env .env
+CMD ["node", "index.js"]
