--- a/domains/alert-managment/geo-service/pom.xml
+++ b/domains/alert-managment/geo-service/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>5.14.0</version>
+        </dependency>
     </dependencies>
 </project>
