--- a/domains/report/audit-trail/Cargo.toml
+++ b/domains/report/audit-trail/Cargo.toml
@@ -9,3 +9,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = "0.4"
 lazy_static = "1.4"
+tokio = { version = "1.34", features = ["full"] }
+tokio-postgres = "0.7"
+dotenv = "0.15"
