--- a/domains/report/report-generator/Cargo.toml
+++ b/domains/report/report-generator/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 actix-web = "4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
+dotenv = "0.15"
+chrono = { version = "0.4", features = ["serde"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
