fix: :sparkles: Fixing dockerfile
Fixing dockerfile on notification service

--- a/domains/notification/retry-engine/Dockerfile
+++ b/domains/notification/retry-engine/Dockerfile
@@ -1,7 +1,8 @@
 FROM golang:1.22-alpine AS build
 WORKDIR /app
-COPY . .
+COPY go.mod ./
 RUN go mod tidy
+COPY . .
 RUN go build -o retry-engine ./cmd/main.go
 
 FROM alpine:latest
