--- a/domains/notification/broadcast-service/Dockerfile
+++ b/domains/notification/broadcast-service/Dockerfile
@@ -1,7 +1,8 @@
 FROM golang:1.22-alpine AS build
 WORKDIR /app
+COPY go.mod ./
+RUN go mod tidy
 COPY . .
-RUN go mod init notification && go mod tidy
 RUN go build -o broadcast-service ./cmd/main.go
 
 FROM alpine:latest
