--- a/domains/notification/channel-service/Dockerfile
+++ b/domains/notification/channel-service/Dockerfile
@@ -1,7 +1,13 @@
 FROM golang:1.22-alpine AS build
 WORKDIR /app
-COPY . .
+
+# Copy go.mod first and download dependencies
+COPY go.mod ./
 RUN go mod tidy
+
+# Now copy the rest of the source code
+COPY . .
+
 RUN go build -o channel-service ./cmd/main.go
 
 FROM alpine:latest
