--- a/domains/notification/socket-service/Dockerfile
+++ b/domains/notification/socket-service/Dockerfile
@@ -1,7 +1,8 @@
 FROM golang:1.22-alpine AS build
 WORKDIR /app
-COPY . .
+COPY go.mod ./
 RUN go mod tidy
+COPY . .
 RUN go build -o socket-service ./cmd/main.go
 
 FROM alpine:latest
