fix: :bug: Update and fix on report domain
Fixing problems with report services that had old version and bad sql syntaxis

--- a/domains/report/audit-trail/.env
+++ b/domains/report/audit-trail/.env
@@ -3,3 +3,8 @@ POSTGRES_PORT=5432
 POSTGRES_DB=deaslapg
 POSTGRES_USER=deaslaadmin
 POSTGRES_PASSWORD=<YOUR_PG_PASSWORD>
+# Full connection string used by SQLx
+DATABASE_URL=postgres://deaslaadmin:<YOUR_PG_PASSWORD>@<YOUR_POSTGRES_ENDPOINT>:5432/deaslapg
+
+# Optional: for your Actix web server port
+PORT=8084
