--- a/domains/report/stat-analyzer/.env
+++ b/domains/report/stat-analyzer/.env
@@ -3,3 +3,5 @@ POSTGRES_PORT=5432
 POSTGRES_DB=deaslapg
 POSTGRES_USER=deaslaadmin
 POSTGRES_PASSWORD=<YOUR_PG_PASSWORD>
+
+DATABASE_URL=postgres://deaslaadmin:<YOUR_PG_PASSWORD>@<YOUR_POSTGRES_ENDPOINT>:5432/deaslapg
