--- a/domains/report/audit-trail/Cargo.toml
+++ b/domains/report/audit-trail/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2024"
 actix-web = "4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 lazy_static = "1.4"
 tokio = { version = "1.34", features = ["full"] }
 tokio-postgres = "0.7"
 dotenv = "0.15"
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
