--- a/domains/report/report-generator/Dockerfile
+++ b/domains/report/report-generator/Dockerfile
@@ -1,10 +1,21 @@
-FROM rust:1.82 as builder
+# syntax=docker/dockerfile:1
+
+FROM rustlang/rust:nightly AS builder
+
 WORKDIR /app
 COPY . .
+
+# --- Inject the DATABASE_URL for SQLx macros ---
+ARG DATABASE_URL
+ENV DATABASE_URL=${DATABASE_URL}
+
 RUN cargo build --release
 
 FROM debian:buster-slim
+
 WORKDIR /app
 COPY --from=builder /app/target/release/report-generator .
+
 EXPOSE 4204
+
 CMD ["./report-generator"]
