fix: :bug: Update code to fix and delte duplicated dbs
Find some mistakes had dbs duplicated calling other profiles on .env, updating dockerfile, installing missing dependencies

--- a/domains/core/auth-service/Dockerfile
+++ b/domains/core/auth-service/Dockerfile
@@ -4,4 +4,5 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 COPY .env .env
-CMD ["node", "index.js"]
+# Start the app (adjust if your entry file is src/app.js)
+CMD ["node", "src/app.js"]
