--- a/domains/core/role-service/.env
+++ b/domains/core/role-service/.env
@@ -1,10 +1,6 @@
-# PostgreSQL Connection
-POSTGRES_HOST=<replace_with_postgres_endpoint>
-POSTGRES_PORT=5432
-POSTGRES_USER=deaslaadmin
-POSTGRES_PASSWORD=<replace_with_pg_password>
-POSTGRES_DB=deaslapg
+NEO4J_URI=bolt://3.216.124.182:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=securepassneo4j123
 
-# JWT/Other service settings
-JWT_SECRET=<your_jwt_secret>
-SERVICE_PORT=3000
+JWT_SECRET=supersecretjwtvalue
+SERVICE_PORT=3004
