--- a/domains/core/user-service/.env
+++ b/domains/core/user-service/.env
@@ -1,10 +1,8 @@
-# PostgreSQL Connection
-POSTGRES_HOST=<replace_with_postgres_endpoint>
+POSTGRES_HOST=3.215.178.247
 POSTGRES_PORT=5432
 POSTGRES_USER=deaslaadmin
-POSTGRES_PASSWORD=<replace_with_pg_password>
+POSTGRES_PASSWORD=securepass1223
 POSTGRES_DB=deaslapg
 
-# JWT/Other service settings
-JWT_SECRET=<your_jwt_secret>
-SERVICE_PORT=3000
+JWT_SECRET=supersecretjwtvalue
+SERVICE_PORT=3002
