--- a/domains/core/language-service/package.json
+++ b/domains/core/language-service/package.json
@@ -12,11 +12,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.3.3",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "jest": "^29.6.1",
-    "supertest": "^6.3.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
