fix: :bug: Fixing problems with requirements on domains and dockerfiles
Fixing the missing dependencies for delivery domain, external. Fixing problem with dockerfiles on report domain with rust

--- a/domains/core/profile-service/.env
+++ b/domains/core/profile-service/.env
@@ -3,6 +3,8 @@ POSTGRES_PORT=5432
 POSTGRES_USER=deaslaadmin
 POSTGRES_PASSWORD=securepass1223
 POSTGRES_DB=deaslapg
+REDIS_HOST=54.236.32.169
+REDIS_PORT=6379
 
 JWT_SECRET=supersecretjwtvalue
 SERVICE_PORT=3003
