--- a/domains/delivery-logging-services/sms-service/.env
+++ b/domains/delivery-logging-services/sms-service/.env
@@ -1,5 +1,5 @@
-MONGO_HOST=<YOUR_MONGO_PUBLIC_IP>
+MONGO_USER=admin
+MONGO_PASSWORD=secret123
+MONGO_HOST=34.204.16.234
 MONGO_PORT=27017
-MONGO_USER=mongoadmin
-MONGO_PASSWORD=<YOUR_MONGO_PASSWORD>
-MONGO_DB=deasla_logs
+MONGO_DB=logs_db
