--- a/domains/report/audit-trail/.env
+++ b/domains/report/audit-trail/.env
@@ -1,10 +1,10 @@
-POSTGRES_HOST=<YOUR_POSTGRES_ENDPOINT>
+POSTGRES_HOST=44.218.146.40
 POSTGRES_PORT=5432
 POSTGRES_DB=deaslapg
 POSTGRES_USER=deaslaadmin
-POSTGRES_PASSWORD=<YOUR_PG_PASSWORD>
+POSTGRES_PASSWORD=securepasspg
 # Full connection string used by SQLx
-DATABASE_URL=postgres://deaslaadmin:<YOUR_PG_PASSWORD>@<YOUR_POSTGRES_ENDPOINT>:5432/deaslapg
+DATABASE_URL=postgres://deaslaadmin:securepasspg@44.218.146.40:5432/deaslapg
 
 # Optional: for your Actix web server port
 PORT=8084
