--- a/domains/report/feedback-service/.env
+++ b/domains/report/feedback-service/.env
@@ -1,4 +1,4 @@
-MONGO_HOST=<YOUR_MONGO_PUBLIC_IP>
+MONGO_HOST=34.204.16.234
 MONGO_PORT=27017
 MONGO_USER=mongoadmin
 MONGO_PASSWORD=<YOUR_MONGO_PASSWORD>
