--- a/domains/report/report-generator/Dockerfile
+++ b/domains/report/report-generator/Dockerfile
@@ -1,19 +1,21 @@
-# syntax=docker/dockerfile:1
-
 FROM rustlang/rust:nightly AS builder
 
 WORKDIR /app
 COPY . .
 
-# --- Inject the DATABASE_URL for SQLx macros ---
 ARG DATABASE_URL
 ENV DATABASE_URL=${DATABASE_URL}
 
 RUN cargo build --release
 
-FROM debian:buster-slim
+FROM debian:bookworm-slim AS runtime
 
 WORKDIR /app
+
+RUN apt-get update && apt-get install -y \
+    libssl3 \
+ && rm -rf /var/lib/apt/lists/*
+
 COPY --from=builder /app/target/release/report-generator .
 
 EXPOSE 4204
