--- a/domains/report/audit-trail/Dockerfile
+++ b/domains/report/audit-trail/Dockerfile
@@ -1,30 +1,23 @@
-# --- Build Stage ---
+# Build Stage
 FROM rustlang/rust:nightly AS builder
 
 WORKDIR /app
 COPY . .
 
-# Build the release binary
 RUN cargo build --release
 
-# --- Runtime Stage ---
-FROM debian:buster-slim
+# Runtime Stage
+FROM debian:bookworm-slim AS runtime
 
-# Install required shared libs (for SQLx PostgreSQL)
+# Install libraries for PostgreSQL and OpenSSL
 RUN apt-get update && apt-get install -y \
     libpq5 \
+    libssl3 \
  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Copy only the final binary from builder stage
 COPY --from=builder /app/target/release/audit-trail .
 
-# Optional: if you use dotenv at runtime
-# COPY .env .env
-
-# Expose the service port
 EXPOSE 4201
-
-# Run the app
 CMD ["./audit-trail"]
