--- a/domains/report/stat-analyzer/.env
+++ b/domains/report/stat-analyzer/.env
@@ -1,4 +1,4 @@
-POSTGRES_HOST=<YOUR_POSTGRES_ENDPOINT>
+POSTGRES_HOST=34.204.16.234
 POSTGRES_PORT=5432
 POSTGRES_DB=deaslapg
 POSTGRES_USER=deaslaadmin
