fix: :bug: Fixing missing values and folder structure
Fixing missing values on .env files that belong to domains and mistake on folder structure and add config of db for java services

--- a/domains/alert-managment/alert-service/.env
+++ b/domains/alert-managment/alert-service/.env
@@ -1,5 +1,5 @@
-CASSANDRA_HOST=<replace_with_cassandra_public_ip>
+CASSANDRA_HOST=3.213.218.83
 CASSANDRA_PORT=9042
 CASSANDRA_USER=cassandra
-CASSANDRA_PASSWORD=<replace_with_cassandra_password>
+CASSANDRA_PASSWORD=securecassandra123 
 CASSANDRA_KEYSPACE=deasla_alerts
