--- a/domains/report/metrics-collector/.env
+++ b/domains/report/metrics-collector/.env
@@ -1,5 +1,6 @@
 MONGO_HOST=34.204.16.234
 MONGO_PORT=27017
-MONGO_USER=mongoadmin
-MONGO_PASSWORD=<YOUR_MONGO_PASSWORD>
+MONGO_USER=admin
+MONGO_PASSWORD=securepass
 MONGO_DB=deasla_logs
+PORT=4203
