--- a/domains/report/report-generator/.env
+++ b/domains/report/report-generator/.env
@@ -1,5 +1,7 @@
-POSTGRES_HOST=34.204.16.234
+POSTGRES_HOST=44.218.146.40
 POSTGRES_PORT=5432
 POSTGRES_DB=deaslapg
-POSTGRES_USER=deaslaadmin
-POSTGRES_PASSWORD=<YOUR_PG_PASSWORD>
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=securepasspg
+PORT=4204
+# Full connection string used by SQL
