--- a/domains/report/stat-analyzer/.env
+++ b/domains/report/stat-analyzer/.env
@@ -1,7 +1,8 @@
-POSTGRES_HOST=34.204.16.234
+POSTGRES_HOST=44.218.146.40
 POSTGRES_PORT=5432
 POSTGRES_DB=deaslapg
-POSTGRES_USER=deaslaadmin
-POSTGRES_PASSWORD=<YOUR_PG_PASSWORD>
-
-DATABASE_URL=postgres://deaslaadmin:<YOUR_PG_PASSWORD>@<YOUR_POSTGRES_ENDPOINT>:5432/deaslapg
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=securepasspg
+# Full connection string used by SQLx
+DATABASE_URL=postgres://admin:securepasspg@44.218.146.40:5432/deaslapg
+PORT=4205
