fix: :bug: Fixing dockerfiles
Fixing dockerfiles for missing ports configuration to see if work the comunication

--- a/domains/alert-managment/alert-service/Dockerfile
+++ b/domains/alert-managment/alert-service/Dockerfile
@@ -7,5 +7,10 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/alert-service-1.0.0.jar app.jar
+
+# Aseguramos que escuche en el puerto 8081 y en 0.0.0.0
+ENV JAVA_OPTS="-Dserver.port=8081 -Dserver.address=0.0.0.0"
+
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
