--- a/domains/alert-managment/geo-service/Dockerfile
+++ b/domains/alert-managment/geo-service/Dockerfile
@@ -9,5 +9,12 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
 COPY --from=builder /app/target/geo-service-1.0.0.jar app.jar
+
+# Expone el puerto 8082
 EXPOSE 8082
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+# Define variables para que Spring Boot escuche en 0.0.0.0:8082
+ENV JAVA_OPTS="-Dserver.port=8082 -Dserver.address=0.0.0.0"
+
+# Ejecuta el servicio con esas variables
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
