--- a/domains/alert-managment/validation-service/Dockerfile
+++ b/domains/alert-managment/validation-service/Dockerfile
@@ -7,5 +7,10 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/validation-service-1.0.0.jar app.jar
+
+# Asegura que Spring Boot escuche en todas las interfaces y el puerto correcto
+ENV JAVA_OPTS="-Dserver.port=8085 -Dserver.address=0.0.0.0"
+
 EXPOSE 8085
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
