--- a/domains/alert-managment/schedule-service/Dockerfile
+++ b/domains/alert-managment/schedule-service/Dockerfile
@@ -7,5 +7,8 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/schedule-service-1.0.0.jar app.jar
-EXPOSE 8082
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+ENV JAVA_OPTS="-Dserver.address=0.0.0.0 -Dserver.port=8084"
+
+EXPOSE 8084
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
