fix: :bug: Fixing problems with files on project
Fixing missing dependencies and add of metric to one service per domain to use prometheus and graphana

--- a/docker-gateway/nginx.conf
+++ b/docker-gateway/nginx.conf
@@ -1,6 +1,14 @@
-events {}
+worker_processes 1;
+
+events {
+  worker_connections 1024;
+}
 
 http {
+  include       mime.types;
+  default_type  application/json;
+  sendfile      on;
+
   upstream user_service {
     server user-service:3000;
   }
@@ -18,14 +26,26 @@ http {
 
     location /api/users/ {
       proxy_pass http://user_service/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /api/auth/ {
       proxy_pass http://auth_service/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /api/alerts/ {
       proxy_pass http://alert_service/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
   }
 }
