--- a/domains/alert-managment/geo-service/pom.xml
+++ b/domains/alert-managment/geo-service/pom.xml
@@ -39,6 +39,18 @@
             <version>5.14.0</version>
         </dependency>
 
+        <!-- Spring Boot Actuator for exposing health & metrics -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!-- Micrometer Prometheus registry for metrics -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
         <!-- Testing support -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
