--- a/domains/core/auth-service/package.json
+++ b/domains/core/auth-service/package.json
@@ -9,17 +9,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-prom-bundle": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
     "jest": "^29.6.1",
-    "supertest": "^6.3.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
