--- a/domains/core/user-service/package.json
+++ b/domains/core/user-service/package.json
@@ -12,12 +12,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-prom-bundle": "^8.0.0",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
     "jest": "^29.6.1",
-    "supertest": "^6.3.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
